"""clean

Revision ID: f953f9b37131
Revises: 
Create Date: 2026-04-05 12:01:49.863658

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'f953f9b37131'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('app_messages',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('message_key', sa.String(length=100), nullable=False),
    sa.Column('language', sa.String(length=10), nullable=False),
    sa.Column('message_text', sa.Text(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('message_key', 'language', name='uq_app_message_key_lang')
    )
    with op.batch_alter_table('app_messages', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_app_messages_language'), ['language'], unique=False)
        batch_op.create_index(batch_op.f('ix_app_messages_message_key'), ['message_key'], unique=False)

    op.create_table('offers',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=120), nullable=False),
    sa.Column('discount_percentage', sa.Float(), nullable=False),
    sa.Column('valid_from', sa.DateTime(), nullable=False),
    sa.Column('valid_to', sa.DateTime(), nullable=False),
    sa.Column('applies_to_first_purchase', sa.Boolean(), nullable=False),
    sa.Column('applies_to_upgrade', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name')
    )
    op.create_table('users',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=120), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('password_reset_tokens',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('otp_hash', sa.String(length=255), nullable=False),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('verified_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('question_banks',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('owner_id', sa.Integer(), nullable=False),
    sa.Column('is_public', sa.Boolean(), nullable=False),
    sa.Column('is_paid', sa.Boolean(), nullable=False),
    sa.Column('base_price', sa.Float(), nullable=False),
    sa.Column('access_type', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['owner_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('quizzes',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('creator_id', sa.Integer(), nullable=False),
    sa.Column('start_at', sa.DateTime(), nullable=True),
    sa.Column('end_at', sa.DateTime(), nullable=True),
    sa.Column('total_time_seconds', sa.Integer(), nullable=True),
    sa.Column('total_score', sa.Float(), nullable=False),
    sa.Column('equally_weighted', sa.Boolean(), nullable=True),
    sa.Column('free_navigation', sa.Boolean(), nullable=True),
    sa.Column('timed_scope', sa.String(length=20), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('access_code', sa.String(length=36), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['creator_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('access_code')
    )
    op.create_table('user_sessions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('jti', sa.String(length=36), nullable=False),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('user_sessions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_user_sessions_jti'), ['jti'], unique=True)

    op.create_table('bank_topics',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('bank_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('sort_order', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['bank_id'], ['question_banks.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('bank_id', 'name', name='uq_bank_topics_bank_name')
    )
    with op.batch_alter_table('bank_topics', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_bank_topics_bank_id'), ['bank_id'], unique=False)

    op.create_table('bank_versions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('bank_id', sa.Integer(), nullable=False),
    sa.Column('version_number', sa.Integer(), nullable=False),
    sa.Column('price', sa.Float(), nullable=False),
    sa.Column('update_type', sa.String(length=10), nullable=False),
    sa.Column('question_count', sa.Integer(), nullable=False),
    sa.Column('topic_count', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('is_major_update', sa.Boolean(), nullable=False),
    sa.ForeignKeyConstraint(['bank_id'], ['question_banks.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('bank_versions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_bank_versions_bank_id'), ['bank_id'], unique=False)

    op.create_table('quiz_attempts',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('quiz_id', sa.Integer(), nullable=False),
    sa.Column('student_id', sa.Integer(), nullable=False),
    sa.Column('started_at', sa.DateTime(), nullable=True),
    sa.Column('submitted_at', sa.DateTime(), nullable=True),
    sa.Column('status', sa.String(length=20), nullable=True),
    sa.Column('remaining_time', sa.Integer(), nullable=False),
    sa.Column('score', sa.Float(), nullable=True),
    sa.ForeignKeyConstraint(['quiz_id'], ['quizzes.id'], ),
    sa.ForeignKeyConstraint(['student_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('purchases',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('bank_id', sa.Integer(), nullable=True),
    sa.Column('bank_version_id', sa.Integer(), nullable=False),
    sa.Column('price_paid', sa.Float(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('purchased_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['bank_id'], ['question_banks.id'], ),
    sa.ForeignKeyConstraint(['bank_version_id'], ['bank_versions.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('purchases', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_purchases_bank_id'), ['bank_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_purchases_bank_version_id'), ['bank_version_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_purchases_created_at'), ['created_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_purchases_purchased_at'), ['purchased_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_purchases_user_id'), ['user_id'], unique=False)

    op.create_table('questions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('bank_id', sa.Integer(), nullable=True),
    sa.Column('topic_id', sa.Integer(), nullable=True),
    sa.Column('bank_version_id', sa.Integer(), nullable=True),
    sa.Column('quiz_id', sa.Integer(), nullable=True),
    sa.Column('created_by', sa.Integer(), nullable=True),
    sa.Column('original_question_id', sa.Integer(), nullable=True),
    sa.Column('type', sa.String(length=50), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('hint', sa.Text(), nullable=True),
    sa.Column('points', sa.Float(), nullable=True),
    sa.Column('base_time', sa.Integer(), nullable=True),
    sa.Column('order_index', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['bank_id'], ['question_banks.id'], ),
    sa.ForeignKeyConstraint(['bank_version_id'], ['bank_versions.id'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['original_question_id'], ['questions.id'], ),
    sa.ForeignKeyConstraint(['quiz_id'], ['quizzes.id'], ),
    sa.ForeignKeyConstraint(['topic_id'], ['bank_topics.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('questions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_questions_bank_version_id'), ['bank_version_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_questions_created_by'), ['created_by'], unique=False)
        batch_op.create_index(batch_op.f('ix_questions_original_question_id'), ['original_question_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_questions_topic_id'), ['topic_id'], unique=False)

    op.create_table('bank_questions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('bank_id', sa.Integer(), nullable=False),
    sa.Column('question_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['bank_id'], ['question_banks.id'], ),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('bank_questions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_bank_questions_bank_id'), ['bank_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_bank_questions_question_id'), ['question_id'], unique=False)

    op.create_table('choices',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('question_id', sa.Integer(), nullable=False),
    sa.Column('text', sa.Text(), nullable=False),
    sa.Column('is_correct', sa.Boolean(), nullable=True),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('question_attempts',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('quiz_attempt_id', sa.Integer(), nullable=False),
    sa.Column('question_id', sa.Integer(), nullable=False),
    sa.Column('selected_answer', sa.Text(), nullable=True),
    sa.Column('is_correct', sa.Boolean(), nullable=True),
    sa.Column('time_spent', sa.Integer(), nullable=True),
    sa.Column('answered_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ),
    sa.ForeignKeyConstraint(['quiz_attempt_id'], ['quiz_attempts.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('question_attributions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('question_id', sa.Integer(), nullable=False),
    sa.Column('original_question_id', sa.Integer(), nullable=False),
    sa.Column('original_bank_id', sa.Integer(), nullable=False),
    sa.Column('original_owner_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['original_bank_id'], ['question_banks.id'], ),
    sa.ForeignKeyConstraint(['original_owner_id'], ['users.id'], ),
    sa.ForeignKeyConstraint(['original_question_id'], ['questions.id'], ),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('question_attributions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_question_attributions_original_bank_id'), ['original_bank_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_question_attributions_original_owner_id'), ['original_owner_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_question_attributions_original_question_id'), ['original_question_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_question_attributions_question_id'), ['question_id'], unique=True)

    op.create_table('quiz_questions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('quiz_id', sa.Integer(), nullable=False),
    sa.Column('question_id', sa.Integer(), nullable=False),
    sa.Column('order', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ),
    sa.ForeignKeyConstraint(['quiz_id'], ['quizzes.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('quiz_questions')
    with op.batch_alter_table('question_attributions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_question_attributions_question_id'))
        batch_op.drop_index(batch_op.f('ix_question_attributions_original_question_id'))
        batch_op.drop_index(batch_op.f('ix_question_attributions_original_owner_id'))
        batch_op.drop_index(batch_op.f('ix_question_attributions_original_bank_id'))

    op.drop_table('question_attributions')
    op.drop_table('question_attempts')
    op.drop_table('choices')
    with op.batch_alter_table('bank_questions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_bank_questions_question_id'))
        batch_op.drop_index(batch_op.f('ix_bank_questions_bank_id'))

    op.drop_table('bank_questions')
    with op.batch_alter_table('questions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_questions_topic_id'))
        batch_op.drop_index(batch_op.f('ix_questions_original_question_id'))
        batch_op.drop_index(batch_op.f('ix_questions_created_by'))
        batch_op.drop_index(batch_op.f('ix_questions_bank_version_id'))

    op.drop_table('questions')
    with op.batch_alter_table('purchases', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_purchases_user_id'))
        batch_op.drop_index(batch_op.f('ix_purchases_purchased_at'))
        batch_op.drop_index(batch_op.f('ix_purchases_created_at'))
        batch_op.drop_index(batch_op.f('ix_purchases_bank_version_id'))
        batch_op.drop_index(batch_op.f('ix_purchases_bank_id'))

    op.drop_table('purchases')
    op.drop_table('quiz_attempts')
    with op.batch_alter_table('bank_versions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_bank_versions_bank_id'))

    op.drop_table('bank_versions')
    with op.batch_alter_table('bank_topics', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_bank_topics_bank_id'))

    op.drop_table('bank_topics')
    with op.batch_alter_table('user_sessions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_user_sessions_jti'))

    op.drop_table('user_sessions')
    op.drop_table('quizzes')
    op.drop_table('question_banks')
    op.drop_table('password_reset_tokens')
    op.drop_table('users')
    op.drop_table('offers')
    with op.batch_alter_table('app_messages', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_app_messages_message_key'))
        batch_op.drop_index(batch_op.f('ix_app_messages_language'))

    op.drop_table('app_messages')
    # ### end Alembic commands ###
